--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "d3": "^7.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.2",
     "sass": "^1.82.0"
   },
   "devDependencies": {
